--- a/app/package.json
+++ b/app/package.json
@@ -9,14 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/lab": "^5.0.0-alpha.139",
+    "@mui/material": "^5.14.4",
+    "@rainbow-me/rainbowkit": "^1.0.8",
+    "@types/lodash": "^4.14.196",
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "formik": "^2.4.3",
+    "lodash": "^4.17.21",
     "next": "13.4.13",
+    "nextjs-progressbar": "^0.0.16",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-dropzone": "^14.2.3",
+    "typescript": "5.1.6",
+    "viem": "^1.5.4",
+    "wagmi": "^1.3.9",
+    "web3.storage": "^4.5.5",
+    "yup": "^1.2.0"
   }
 }
