--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@types/lodash": "^4.14.196",
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
+    "@types/react-calendar-heatmap": "^1.6.3",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
     "eslint": "8.46.0",
@@ -28,6 +29,7 @@
     "nextjs-progressbar": "^0.0.16",
     "notistack": "^3.0.1",
     "react": "18.2.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "typescript": "5.1.6",
